# fibo-vcpkg-dummy

./: CMakeLists.txt  vcpkg.json
cmake/: fiboConfig.cmake
src/: main.cpp
